# rules_shellspec

./: .bazelrc  .editorconfig  .gitattributes  .pre-commit-config.yaml  .shellcheckrc  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: publish.yaml  release.yaml  release_prep.sh
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  calculator.sh  calculator_spec.sh  greet.sh  greet_spec.sh
e2e/smoke/subdir/: BUILD  counter.sh  counter_spec.sh  math.sh  math_spec.sh
shellspec/: BUILD.bazel  defs.bzl  extensions.bzl  lint.bzl  repositories.bzl
shellspec/private/: BUILD.bazel  runner.sh.tpl  shellspec_test.bzl  versions.bzl
shellspec/tests/: BUILD.bazel  shellspec_test_tests.bzl  versions_test.bzl
tools/lint/: BUILD.bazel  linters.bzl  multitool.lock.json
