load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# Export the shellspec test runner template
exports_files(["runner.sh.tpl"])

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//shellspec/private:versions",
    ],
)

bzl_library(
    name = "lint",
    srcs = ["lint.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":lint",
        "//shellspec/private:shellspec_test",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":repositories",
        "//shellspec/private:versions",
    ],
)
