# Override http_archive for local testing
local_repository(
    name = "rules_shellspec",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

#########################
# rules_shellspec setup #
#########################
# Fetches the rules_shellspec dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_shellspec//shellspec:repositories.bzl", "rules_shellspec_dependencies", "shellspec_register")

rules_shellspec_dependencies()

shellspec_register()
