load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//shellspec:__subpackages__"],
)

bzl_library(
    name = "shellspec_test",
    srcs = ["shellspec_test.bzl"],
    visibility = ["//shellspec:__subpackages__"],
    deps = [
        "@bazel_lib//lib:windows_utils",
    ],
)

exports_files(["runner.sh.tpl"])
