"""Lint and format configuration for rules_shellspec."""

load("@aspect_rules_lint//format:defs.bzl", "format_multirun", "format_test")

package(default_visibility = ["//visibility:public"])

# Format command - run with: bazel run //tools/lint:format
format_multirun(
    name = "format",
    shell = "@multitool//tools/shfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
)

# Format check - run with: bazel test //tools/lint:format_test
# Note: Disabled on Windows due to rules_lint format_test script compatibility issues
format_test(
    name = "format_test",
    no_sandbox = True,
    shell = "@multitool//tools/shfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    workspace = "//:MODULE.bazel",
)
